# CPP1Minor

./: .gitignore  CMakeLists.txt
CPP1/SDL/: CMakeLists.txt  Main.cpp
CPP1/week1/: Aap.cpp
CPP1/week2/: CMakeLists.txt  Day.h  DontLeak.cpp  Favourite.cpp  Favourite.h  Week.h
CPP2/Week1/: Animals.cpp  Animals.h  CMakeLists.txt  Farm.cpp  Farm.h  main.cpp
CPP2/week2/: CMakeLists.txt  Observable.cpp  Observable.h  input.txt  main.cpp
SDL/lib/: sdl2-config.cmake
week1/: CMakeLists.txt  file1.cpp  file2.cpp  file2.h
week2/: BufferOverflow.cpp  CMakeLists.txt  CString.cpp  Call.cpp  DayWeekStack.cpp  Main.cpp  MyName.cpp  NewDay.cpp
